--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Stock Insights</title>
+    <title>Portfolio Insights</title>
     <meta name="viewport" content="width=device-width">
   </head>
   <body>
